# roki

./: .gitignore  AGENTS.md  README.md  package.json  tasks.md  tsconfig.base.json  turbo.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: capture.rs  main.rs  overlay.rs  shortcut.rs  tts.rs
apps/desktop/src/components/: Panel.tsx  TauriBridge.ts
apps/tts-server/: README.md  requirements.txt  server.py
apps/web/: index.html  package.json
apps/web/src/: App.tsx  styles.css
