[package]
name = "roki-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.4"
base64 = "0.22"
image = "0.25"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
